# mutil-user-agent-backend

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
api/: admin.py  auth.py  files.py  models.py  server.py  webdav.py  workspace.py
design/: 多租户设计.excalidraw
design/mvp/: MVP实现情况总结.md  mvp优化1.md  plan.md  多租户agent设计方案.md  多租户设计.excalidraw
design/v0_1_1/: 后续计划.md  多用户支持版本-四件套分析.md  多轮对话中断恢复方案.md
design/v0_1_10_ask_user_tool/: API设计.md  README.md  实现计划.md  测试用例.md
design/v0_1_11_agent_manager_refactor/: README.md
design/v0_1_12_plan_build_mode/: README.md
design/v0_1_13_todos_streaming/: todos流式展示方案.md
design/v0_1_14_skill-validation-checkpoint/: skill-validation-checkpoint.md
design/v0_1_2/: README.md  迭代1-容器持久化.md  迭代1-影响分析.md  迭代2-Skill目录挂载.md  迭代3-Skill管理API.md
design/v0_1_2docker沙箱方案/: docker沙箱MVP方案.md  docker沙箱实现方案.md
design/v0_1_3_sse格式迁移/: README.md
design/v0_1_3_前端SSE集成方案/: README.md
design/v0_1_4/: 历史会话列表API.md
design/v0_1_5_webdav文件操作/: README.md
dev_summary/: 2026-02-13_summary.md
src/: agent_manager.py  auth.py  chunk_upload.py  config.py  database.py  daytona_client.py  daytona_sandbox.py  daytona_sandbox_manager.py  docker_sandbox.py  skill_validator.py  snapshot_manager.py  webdav.py  workspace_sync.py
tests/: test_container_persistence.py  test_daytona_sandbox.py  test_direct_resume.py  test_mvp.py  test_resume_debug.py  test_status_history.py  test_v0_1_1.py  test_v0_1_5_webdav.py  test_v0_1_7_file_upload.py  test_v0_1_8_user_container.py
(+67 files in other folders)
