[project]
name = "backend"
version = "0.1.0"
description = "Multi-tenant AI Agent Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.3.12",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=1.0.0",
    "langfuse>=3.14.1",
    "langgraph-checkpoint-postgres>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "argon2-cffi>=25.1.0",
    "langchain-core>=1.2.9",
    "daytona>=0.143.0",
    "langchain-daytona>=0.0.2",
]
